--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -7,3 +7,21 @@ body
 .container
     max-width: 1110px
     margin: 0 auto
+
+h2
+    +noto
+    font-size: 30px
+    text-align: center
+
+h3
+    text-align: center
+    font-size: 21px
+    +regular
+
+.btn
+    display: inline-block
+    font-size: 18px
+    +medium
+    text-transform: uppercase
+    padding: 15px 35px
+    text-align: center
