--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@
 
 body {
   font-family: "Gilroy Regular", sans-serif;
+  font-weight: normal;
   font-size: 14px;
 }
 
@@ -33,44 +34,263 @@ body {
   margin: 0 auto;
 }
 
+h2 {
+  font-family: "Noto Serif", serif;
+  font-weight: normal;
+  font-size: 30px;
+  text-align: center;
+}
+
+h3 {
+  text-align: center;
+  font-size: 21px;
+  font-family: "Gilroy Regular", sans-serif;
+  font-weight: normal;
+}
+
+.btn {
+  display: inline-block;
+  font-size: 18px;
+  font-family: "Gilroy Medium", sans-serif;
+  font-weight: normal;
+  text-transform: uppercase;
+  padding: 15px 35px;
+  text-align: center;
+}
+
 .header {
-  background: #343536;
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 99;
+  margin-top: 25px;
 }
 .header__inner {
   display: flex;
+  align-items: center;
 }
 .header__item {
-  display: flex;
-  flex: 1 1 33.333%;
-  color: #ffffff;
+  flex: 0 0 33.333%;
 }
 
-.nav__list {
+.nav {
   display: flex;
   justify-content: flex-start;
+  align-items: center;
+  -moz-column-gap: 40px;
+       column-gap: 40px;
 }
-.nav__item {
-  margin-right: 40px;
-  list-style: none;
+.nav__link {
+  color: #ffffff;
+  text-decoration: none;
+}
+.nav__link:hover {
+  text-decoration: underline;
+}
+
+.logo {
+  display: flex;
+  justify-content: center;
+}
+.logo img {
+  margin: 0 20px;
+}
+
+.menu {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
+}
+.menu__link {
+  color: #ffffff;
+  text-decoration: none;
+  margin-right: 20px;
+}
+.menu__link:hover {
+  text-decoration: underline;
+}
+.menu__img {
+  transition: all linear 0.2s;
+}
+.menu__img:hover {
+  transform: scale(1.25);
+}
+.menu__img:active {
+  transform: scale(1);
 }
 
 .hero {
+  display: flex;
+  flex-direction: column;
   background: #979797 url("../img/bgc.jpg") no-repeat center;
   background-size: cover;
   min-height: 950px;
   text-align: center;
   color: #fff;
 }
+.hero__inner {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  flex: 1 0 100%;
+}
 .hero__title {
   font-family: "Noto Serif", serif;
+  font-weight: normal;
   font-size: 36px;
+  margin-bottom: 50px;
 }
 .hero__btn {
+  display: inline-block;
   font-family: "Gilroy Medium", sans-serif;
+  font-weight: normal;
   font-size: 18px;
   text-transform: uppercase;
   padding: 15px 35px;
   background: #333333;
   border: 1px solid #FFFFFF;
+  color: #ffffff;
+  margin-bottom: 80px;
+  transition: background linear 0.3s;
+}
+.hero__btn:hover {
+  background-color: #ffffff;
+  color: #333333;
+}
+
+.logos {
+  border-top: 1px solid #fff;
+}
+.logos__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 120px;
+}
+.logos__item {
+  border-right: 1px solid #ffffff;
+  padding-right: 13px;
+}
+.logos__item:last-child {
+  border-right: none;
+}
+
+.events {
+  margin: 100px 0;
+}
+.events__title {
+  margin-bottom: 50px;
+}
+.events__suptitle {
+  margin-bottom: 20px;
+}
+.events__category {
+  display: flex;
+  justify-content: space-between;
+}
+
+.category__btn {
+  position: relative;
+  background-color: #fff;
+  display: block;
+  border: 1px solid #D6D6D6;
+  width: 165px;
+  text-align: center;
+  padding: 20px 0;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-family: "Gilroy Medium", sans-serif;
+  font-weight: normal;
+}
+.category__btn:hover {
+  background-color: #333333;
+  color: #fff;
+}
+.category__btn::before {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  border: 1px solid #D6D6D6;
+  width: 163px;
+  height: 56px;
+  z-index: -10;
+}
+
+.galery {
+  margin-top: 60px;
+  display: flex;
+  flex-wrap: wrap;
+  -moz-column-gap: 30px;
+       column-gap: 30px;
+  justify-content: center;
+}
+.galery__item {
+  position: relative;
+  width: 350px;
+  height: 280px;
+  margin-bottom: 30px;
+  overflow: hidden;
+}
+.galery__item img {
+  transition: all linear 0.5s;
+}
+.galery__item:hover img {
+  transform: scale(1.1);
+}
+.galery__title {
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-size: 24px;
+  text-align: center;
+  font-family: "Gilroy Medium", sans-serif;
+  font-weight: normal;
+  width: 350px;
+  height: 280px;
+  background: linear-gradient(180deg, rgba(180, 180, 180, 0) 30%, #333333 100%);
+}
+.galery__title p {
+  margin-top: 210px;
+}
+
+.salon {
+  background: #333333 url("../img/pattern.png");
+  color: #ffffff;
+  padding: 100px 0;
+}
+.salon__inner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.salon__suptitle {
+  margin-bottom: 20px;
+}
+.salon__title {
+  margin-bottom: 50px;
+}
+.salon__text {
+  padding: 0 190px;
+  text-align: center;
+  font-size: 18px;
+  line-height: 1.5;
+}
+.salon__btn {
+  background-color: #ffffff;
+  color: #333333;
+  margin-top: 50px;
+  transition: background linear 0.3s;
+}
+.salon__btn:hover {
+  background: #333333;
+  border: 1px solid #ffffff;
   color: #ffffff;
 }/*# sourceMappingURL=style.css.map */
