--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -1,38 +1,74 @@
 .header
-    background: #343536  
+    position: absolute
+    width: 100%
+    top: 0
+    left: 0
+    z-index: 99
+    margin-top: 25px 
 
     &__inner
         display: flex
+        align-items: center
     &__item
-        display: flex
-        flex: 1 1 33.333%
-        color: #ffffff
+        flex: 0 0 33.333%
+        
 .nav
-    &__list
-        display: flex
-        justify-content: flex-start
-    &__item
-        margin-right: 40px
-        list-style: none
-.logo
-    
-            
-            
-                      
+    display: flex
+    justify-content: flex-start
+    align-items: center
+    column-gap: 40px
+    &__link
+        color: #ffffff
+        text-decoration: none
+        &:hover
+            text-decoration: underline
 
-    
-    
+.logo
+    display: flex
+    justify-content: center
+    & img
+        margin: 0 20px
+
+.menu
+    display: flex
+    justify-content: flex-end
+    align-items: center
+    column-gap: 20px
+    &__link
+        color: #ffffff
+        text-decoration: none
+        margin-right: 20px
+        &:hover
+            text-decoration: underline
+    &__img
+        transition: all linear 0.2s
+
+    &__img:hover
+        transform: scale(1.25)
+    &__img:active
+        transform: scale(1)
+        
 
 .hero
+    display: flex
+    flex-direction: column
     background: #979797 url("../img/bgc.jpg") no-repeat center
     background-size: cover
     min-height: 950px
     text-align: center
     color: #fff
+    &__inner
+        display: flex
+        flex-direction: column
+        justify-content: flex-end
+        align-items: center
+        flex: 1 0 100%
     &__title
         +noto
         font-size: 36px
+        margin-bottom: 50px
     &__btn
+        display: inline-block
         +medium
         font-size: 18px
         text-transform: uppercase
@@ -40,6 +76,28 @@
         background: #333333
         border: 1px solid #FFFFFF
         color: #ffffff
+        margin-bottom: 80px
+        transition: background linear 0.3s
+        &:hover
+            background-color: #ffffff
+            color: #333333
 
+.logos
+    border-top: 1px solid #fff
+    
+    &__inner
+        display: flex
+        justify-content: space-between
+        align-items: center
+        min-height: 120px
+
+    &__item
+        border-right: 1px solid #ffffff
+        padding-right: 13px
+        &:last-child
+            border-right: none
+        
+              
+        
 
 
